--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,25 @@
     <version>1.0-SNAPSHOT</version>
 
 
-    <distributionManagement>
+    <repositories>
         <repository>
             <id>maven-snapshots</id>
             <name>maven-snapshots</name>
             <url>http://nexus-nexus.apps.cluster-cc6c.cc6c.example.opentlc.com/repository/maven-snapshots/</url>
             <layout>default</layout>
         </repository>
-    </distributionManagement>
+    </repositories>
+         
+          <build>
+    <finalName>service-domain-model</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+      </plugin>
+    </plugins>
+
+
+  </build>
 
 </project>
